--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
                         url: "https://runtime-api.voiceflow.com"
                     }
                 });
-                console.log('Voiceflow widget inicializálva, gomb figyelése indul...');
-                observeChatButton();
+                console.log('Voiceflow widget inicializálva');
             };
             v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; 
             v.type = "text/javascript"; 
@@ -195,46 +194,41 @@
 
         // Voiceflow launcher gomb figyelése
         function observeChatButton() {
-            // Ellenőrizzük, hogy a Voiceflow API létezik-e
-            if (!window.voiceflow || !window.voiceflow.chat) {
-                console.log('Voiceflow API nem található, újrapróbálkozás 500ms múlva...');
-                setTimeout(observeChatButton, 500);
-                return;
-            }
-
-            // Próbáljuk meg a voiceflow-chat elemet keresni
             const voiceflowContainer = document.querySelector('voiceflow-chat');
-            if (!voiceflowContainer) {
-                console.log('Voiceflow konténer (voiceflow-chat) nem található a DOM-ban.');
-                console.log('DOM tartalom ellenőrzése:', document.body.innerHTML);
-                console.log('Keresés a #chat-container-ben:', document.querySelector('#chat-container').innerHTML);
+            if (voiceflowContainer && voiceflowContainer.shadowRoot) {
+                console.log('Voiceflow konténer és Shadow DOM megtalálva (voiceflow-chat), gomb figyelése indul');
+                const shadowRoot = voiceflowContainer.shadowRoot;
+                
+                const launcherButton = shadowRoot.querySelector('._15s29m92');
+                if (launcherButton) {
+                    console.log('Launcher gomb (._15s29m92) megtalálva a Shadow DOM-ban');
+                    launcherButton.addEventListener('click', () => {
+                        console.log('Launcher gombra kattintás észlelve!');
+                        showPopup();
+                    });
+                } else {
+                    console.log('Launcher gomb (._15s29m92) nem található a Shadow DOM-ban, újrapróbálkozás...');
+                    setTimeout(observeChatButton, 500);
+                }
+            } else {
+                console.log('Voiceflow konténer vagy Shadow DOM nem található (voiceflow-chat), újrapróbálkozás...');
                 setTimeout(observeChatButton, 500);
-                return;
             }
-
-            const shadowRoot = voiceflowContainer.shadowRoot;
-            if (!shadowRoot) {
-                console.log('Shadow root nem található a voiceflow-chat elemen, újrapróbálkozás 500ms múlva...');
-                setTimeout(observeChatButton, 500);
-                return;
-            }
-
-            const launcherButton = shadowRoot.querySelector('._15s29m92');
-            if (!launcherButton) {
-                console.log('Launcher gomb (._15s29m92) nem található a shadow DOM-ban, újrapróbálkozás 500ms múlva...');
-                // Naplózzuk a shadow DOM tartalmát hibakereséshez
-                console.log('Shadow DOM tartalom:', shadowRoot.innerHTML);
-                setTimeout(observeChatButton, 500);
-                return;
-            }
-
-            launcherButton.addEventListener('click', () => {
-                console.log('Launcher gombra kattintás észlelve!');
-                showPopup();
-            });
-
-            console.log('Launcher gomb figyelése sikeresen elindult.');
         }
+
+        // Voiceflow betöltés figyelése
+        function waitForVoiceflow() {
+            if (window.voiceflow && window.voiceflow.chat) {
+                console.log('Voiceflow chat API betöltve');
+                observeChatButton();
+            } else {
+                console.log('Voiceflow chat API még nem betöltve, várakozás...');
+                setTimeout(waitForVoiceflow, 500);
+            }
+        }
+
+        // Indítsuk a figyelést
+        waitForVoiceflow();
     </script>
 </body>
 </html>
