--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     url: 'https://general-runtime.voiceflow.com',
                     assistant: {
                         extensions: [DateExtension],
-                        stylesheet: "https://github.com/szileczkisoma/mindentmentteszt/drbarat.css",
+                        stylesheet: "https://szileczkisoma.github.io/mindentmentteszt/drbarat.css",
                         persistence: 'sessionStorage'
                     },
                     versionID: 'production',
