--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
                     render: {
                         mode: 'embedded',
                         target: document.getElementById('image-container')
-                    }
+                    },
+                    autostart: true
                 });
             };
             v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs";
