--- a/index.html
+++ b/index.html
@@ -107,6 +107,151 @@
         }
     </script>
 
+    <script>
+        const DateExtension = {
+            name: 'Date',
+            type: 'response',
+            match: ({ trace }) => {
+                const isMatch = trace.type === 'ext_date' || (trace.payload && trace.payload.name === 'ext_date');
+                console.log('Match called with trace:', trace, 'Result:', isMatch);
+                return isMatch;
+            },
+            render: ({ trace, element }) => {
+                if (!element) {
+                    console.error('Element not provided to DateExtension');
+                    return;
+                }
+
+                const formContainer = document.createElement('div');
+                formContainer.style.position = 'relative';
+
+                let currentDate = new Date();
+                let minDate = new Date();
+                let maxDate = new Date();
+                maxDate.setMonth(currentDate.getMonth() + 6);
+
+                let minDateString = minDate.toISOString().slice(0, 10);
+                let maxDateString = maxDate.toISOString().slice(0, 10);
+
+                formContainer.innerHTML = `
+                    <style>
+                        .date-select-container {
+                            position: relative;
+                            width: 100%;
+                        }
+                        .date-select-btn {
+                            background: linear-gradient(to right, #d3d3d3, #e0e0e0);
+                            border: none;
+                            color: #333;
+                            padding: 10px;
+                            border-radius: 5px;
+                            width: 100%;
+                            cursor: pointer;
+                            font: normal 14px sans-serif;
+                            text-align: center;
+                        }
+                        .date-select-btn:hover {
+                            opacity: 0.9;
+                        }
+                        .submit-button {
+                            background: #48AEE1;
+                            border: none;
+                            color: white;
+                            padding: 10px;
+                            border-radius: 5px;
+                            cursor: pointer;
+                            font: normal 14px sans-serif;
+                            width: 100%;
+                            margin-top: 10px;
+                            text-align: center;
+                            transition: opacity 0.3s;
+                        }
+                        .submit-button.submitted {
+                            opacity: 0.5;
+                            cursor: not-allowed;
+                        }
+                        .date-input {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            opacity: 0;
+                            pointer-events: none;
+                        }
+                        .date-input::-webkit-calendar-picker-indicator {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            right: 0;
+                            bottom: 0;
+                            width: 100%;
+                            height: 100%;
+                            cursor: pointer;
+                        }
+                    </style>
+                    <div class="date-select-container">
+                        <button class="date-select-btn">Dátum kiválasztása</button>
+                        <input type="date" class="date-input" min="${minDateString}" max="${maxDateString}" />
+                    </div>
+                `;
+
+                const dateSelectBtn = formContainer.querySelector('.date-select-btn');
+                const dateInput = formContainer.querySelector('.date-input');
+                let submitButton = null;
+
+                dateSelectBtn.addEventListener('click', () => {
+                    dateInput.style.pointerEvents = 'auto';
+                    try {
+                        dateInput.showPicker();
+                    } catch (e) {
+                        console.log("A showPicker nem támogatott:", e);
+                        dateInput.focus();
+                    }
+                });
+
+                dateInput.addEventListener('change', function () {
+                    const selectedDate = this.value;
+                    if (selectedDate) {
+                        dateSelectBtn.textContent = selectedDate;
+                        this.style.pointerEvents = 'none';
+
+                        if (!submitButton) {
+                            submitButton = document.createElement('button');
+                            submitButton.className = 'submit-button';
+                            submitButton.textContent = 'Küldés';
+                            formContainer.appendChild(submitButton);
+
+                            submitButton.addEventListener('click', () => {
+                                const currentDate = dateInput.value;
+                                submitButton.textContent = 'Elküldve';
+                                submitButton.classList.add('submitted');
+                                submitButton.disabled = true;
+
+                                console.log('Sending to Voiceflow:', { date: currentDate });
+                                window.voiceflow.chat.interact({
+                                    type: 'complete',
+                                    payload: { date: currentDate },
+                                });
+                            });
+                        }
+                    }
+                });
+
+                formContainer.addEventListener('click', (event) => {
+                    if (!formContainer.contains(event.target)) {
+                        dateInput.style.pointerEvents = 'none';
+                    }
+                });
+
+                setTimeout(() => {
+                    element.appendChild(formContainer);
+                    console.log('DateExtension rendered successfully');
+                }, 100);
+            },
+        };
+    </script>
+
     <script type="text/javascript">
         (function(d, t) {
             var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
@@ -125,6 +270,10 @@
                     versionID: 'production',
                     voice: {
                         url: "https://runtime-api.voiceflow.com"
+                    },
+                    assistant: {
+                        extensions: [DateExtension],
+                        stylesheet: "https://szileczkisoma.github.io/mindentmentteszt/style.css"
                     }
                 });
             };
